docs/example/01.let.js
"use srtict";

// {} 中使用 let 的作用域
if(true){
  let fruit = "12";
}

// error
cosnole.log(fruit);
